Updated make_filesystsm.bat script to properly build the user filesystem from the new repository structure.  It also updates Release/AutoRun from source files if they were built.  Updated README to demonstrate how to build the user filesystem.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ Source/PowerButton/.vs/
 Source/PowerButton/BadgeWX_PowerT10/Debug/
 Source/PowerButton/BadgeWX_PowerT10/Release/
 
+#autorunBL auto-generated files
+Source/AutoRun/autorunBL/cmm/
+
 #ESP auto-generated files
 Release/ESP/*.a
 Release/ESP/*.out
