--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@ Release/Test/*.bin filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.gif filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.png filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.jpg filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
