--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@ Source/Examples/*.gif filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.png filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.jpg filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.rom filter=lfs diff=lfs merge=lfs -text
