--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,4 @@ Source/Examples/*.png filter=lfs diff=lfs merge=lfs -text
 Source/Examples/*.jpg filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.rom filter=lfs diff=lfs merge=lfs -text
+*.hex filter=lfs diff=lfs merge=lfs -text
