Re-submit updated files with binaries and libwifi compile-time files removed.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ Release/Core/*.out
 
 #Ultra Edit
 *.bak
+
+#Temporary libwifi exclusions
+Source/Boot/autorunBL/libwifi/cmm/
+Source/Boot/autorunBL/libwifi/*.binary
+Source/Boot/autorunBL/libwifi/*.elf
