--- a/.gitattributes
+++ b/.gitattributes
@@ -11,8 +11,11 @@
 Program/*.exe filter=lfs diff=lfs merge=lfs -text
 Release/Core/*.ota filter=lfs diff=lfs merge=lfs -text
 Release/Power/*.hex filter=lfs diff=lfs merge=lfs -text
-Source/Examples/*.gif filter=lfs diff=lfs merge=lfs -text
-Source/Examples/*.png filter=lfs diff=lfs merge=lfs -text
-Source/Examples/*.jpg filter=lfs diff=lfs merge=lfs -text
+#Source/Examples/*.gif filter=lfs diff=lfs merge=lfs -text
+#Source/Examples/*.png filter=lfs diff=lfs merge=lfs -text
+#Source/Examples/*.jpg filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.rom filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
